[gd_scene load_steps=10 format=3 uid="uid://hfdy01nka57o"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_cve0i"]
[ext_resource type="Texture2D" uid="uid://lku1ty0hvtvv" path="res://assets/pictures/tetris-background.png" id="2_ycwoo"]
[ext_resource type="FontFile" uid="uid://ca0h6iu4buqvp" path="res://assets/fonts/3997-font.otf" id="3_22ede"]
[ext_resource type="Script" path="res://scripts/menu_button.gd" id="4_3in1k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6wub"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkke1"]
bg_color = Color(0.678431, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_je55b"]
bg_color = Color(0.494118, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1t1fg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7snu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cve0i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 860.0
texture = ExtResource("2_ycwoo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -94.0
offset_right = 115.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../LanguageButton")
focus_neighbor_top = NodePath("../ExitButton")
theme_override_colors/font_color = Color(1, 1, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_22ede")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_t6wub")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkke1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_je55b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1t1fg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7snu")
text = "Start"
script = ExtResource("4_3in1k")

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../LanguageButton")
theme_override_colors/font_color = Color(1, 1, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_22ede")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_t6wub")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkke1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_je55b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1t1fg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7snu")
text = "Options"
script = ExtResource("4_3in1k")

[node name="LeaderstatsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../LanguageButton")
theme_override_colors/font_color = Color(1, 1, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_22ede")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_t6wub")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkke1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_je55b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1t1fg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7snu")
text = "Leaderstats"
script = ExtResource("4_3in1k")

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../LanguageButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_color = Color(1, 1, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_22ede")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_t6wub")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkke1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_je55b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1t1fg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7snu")
text = "Exit"
script = ExtResource("4_3in1k")

[node name="LanguageButton" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 231.0
offset_bottom = 71.0
focus_neighbor_right = NodePath("../VBoxContainer/StartButton")
focus_neighbor_bottom = NodePath("../VBoxContainer/StartButton")
theme_override_colors/font_color = Color(1, 1, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.584314, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_22ede")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_t6wub")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkke1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_je55b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1t1fg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k7snu")
text = "Language"
script = ExtResource("4_3in1k")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="LanguageButton" to="." method="_on_language_button_pressed"]
